修复GitHub Pages部署路径问题

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/public/logo.svg" />
+    <link rel="icon" href="/YouGirls/assets/logo-DhPkbamg.svg" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
